kubernetes/main/applications/kube-system/cilium/policy/pod-gateway.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: pod-gateway-vpn-only
spec:
  endpointSelector:
    matchExpressions:
      - { key: 'vpn.home.arpa/tunnel', operator: In, values: ['ivpn']}
  ingress:
    - fromEndpoints:
        - {}
    - fromEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/name: pod-gateway
            io.kubernetes.pod.namespace: pod-gateway
      toPorts:
        - ports:
            - port: "8472"
              protocol: UDP
            - port: "68"
              protocol: UDP
    - fromEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/instance: nginx-internal
            io.kubernetes.pod.namespace: nginx-system
  egress:
    - toEndpoints:
        - {}
    - toCIDRSet:
        - cidr:  172.16.0.0/30
      toPorts:
        - ports:
          - port: "53"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
    - toEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/instance: nginx-internal
            io.kubernetes.pod.namespace: nginx-system
      toPorts:
        - ports:
            - port: "443"
    - toEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/name: pod-gateway
            io.kubernetes.pod.namespace: pod-gateway
      toPorts:
        - ports:
            - port: "8472"
              protocol: UDP
            - port: "67"
              protocol: UDP
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: postgres
            io.kubernetes.pod.namespace: cnpg
      toPorts:
        - ports:
            - port: '5432'
              protocol: TCP
    - icmps:
        - fields:
            - type: 8
              family: IPv4
